[gd_scene load_steps=4 format=3 uid="uid://cextfv4gtljvs"]

[ext_resource type="Script" path="res://slingshot.gd" id="1_qgh7y"]
[ext_resource type="Texture2D" uid="uid://ck7b571srdd08" path="res://SlingshotBadPiggies.webp" id="2_qgc6i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uluta"]
radius = 150.0

[node name="Slingshot" type="Node2D" groups=["Slingshot"]]
script = ExtResource("1_qgh7y")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-24, -259)
texture = ExtResource("2_qgc6i")

[node name="LeftLine" type="Line2D" parent="."]
position = Vector2(1, -20)
points = PackedVector2Array(-311, -430, 38.9999, -430)
width = 5.0
default_color = Color(0, 1, 1, 1)

[node name="RightLine" type="Line2D" parent="."]
position = Vector2(1, -19)
points = PackedVector2Array(-311, -430, -65, -430)
width = 5.0
default_color = Color(0, 1, 1, 1)

[node name="TouchArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchArea"]
position = Vector2(-4, -449)
shape = SubResource("CircleShape2D_uluta")

[node name="CenterOfSlingshot" type="Marker2D" parent="."]
position = Vector2(-4, -431.325)

[connection signal="input_event" from="TouchArea" to="." method="_on_touch_area_input_event"]
